...
      required this.originalResearch,
      required this.reviews});

  factory Collections._fromJson(
          Map<String, Map<String, String>> json) =>
      Collections._(
          aCPJournalClub: ACPJournalClub.fromJson(json['ACP Journal Club']!),
          beyondTheGuidelines:
              ACPJournalClub.fromJson(json["Beyond the Guidelines"]!),
          clinicalGuidelines:
              ACPJournalClub.fromJson(json["Clinical Guidelines"]!),
          cOVID19: ACPJournalClub.fromJson(json["COVID-19"]!),
          inTheClinic: ACPJournalClub.fromJson(json["In the Clinic"]!),
          onBeingADoctor: ACPJournalClub.fromJson(json["On Being a Doctor"]!),
          originalResearch: ACPJournalClub.fromJson(json['Original Research']!),
          reviews: ACPJournalClub.fromJson(json["Reviews"]!));

  static final Collections _collections =
      Collections._fromJson(Collections.data);
  factory Collections() => _collections;

  static Map<String, Map<String, String>> data = {
...
