...
                              ? const SemanticsProperties(
                                  label:
                                      'Remove bookmark Double tap to activate')
                              : const SemanticsProperties(
                                  label: 'Add bookmark Double tap to activate'),
                          child: GestureDetector(
                            key: const ValueKey('bookmark'),
                            onTap: () async {
                              if (index['is_bookmarked'] == 1) {
                                ScaffoldMessenger.of(context).showSnackBar(
                                  const SnackBar(
                                    content: Text('Bookmark removed'),
                                    duration: Duration(seconds: 2),
...
